--- a/Jquery/styles.css
+++ b/Jquery/styles.css
@@ -1,7 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: rgba(201, 170, 136);
+  display: border;
 }
 
 .intro {
-  padding-top: 25px;
+  margin-bottom: 75px;
+  margin-top: 25px;
 }
