--- a/Jquery/styles.css
+++ b/Jquery/styles.css
@@ -11,3 +11,12 @@ body {
   margin-bottom: 75px;
   margin-top: 25px;
 }
+
+.tt {
+  text-align: center;
+}
+
+.temp {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
