--- a/Jquery/styles.css
+++ b/Jquery/styles.css
@@ -7,9 +7,47 @@ body {
   display: border;
 }
 
+/* ul {
+  text-align: center;
+  
+} */
+
+#animal-options {
+  text-align: center;
+}
+
+#animal-options span {
+    font-size: 20px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #555;
+    color: yellow;
+    border-radius: 50%;
+    vertical-align: middle;
+    padding: 15px;
+    height: 50px;
+    width: auto;
+    margin: 8px;
+  }
+
+  #animal-options span:hover {
+    background-color: rgba(230, 185, 136, 0.60);
+    /* font-size: 30px; */
+    border-radius: 50%;
+  }
+
+.separation-line {
+  border: 2px solid rgb(24, 22, 22);
+  /* border-radius: 5px; */
+}
+
 .intro {
   margin-bottom: 75px;
   margin-top: 25px;
+  margin-right: 0;
+  padding-right: 0;
+  text-align: center;
 }
 
 .tt {
@@ -20,12 +58,30 @@ body {
 
 }
 
+#animals-listing span:hover{
+  background-color: rgba(230, 185, 136, 0.60);
+  border-radius: 15px;
+  font-size: larger;
+}
+
+#animals-listing span {
+  background-color: rgb(163, 139, 139, 0.2);
+  border-radius: 15px;
+}
+
+/* #animals-listing {
+  background-color: rgb(163, 139, 139, 0.2);
+  border-radius: 15px;
+} */
+
 .temp {
   margin-top: 40px;
 }
 
 .desc {
-  padding: 15px;
+  padding: 25px;
+  padding-bottom: 1px;
+  text-align: left;
 }
 
 
@@ -39,4 +95,8 @@ body {
 
 .all-adopted{
   font-size: 30px;
+}
+
+.options-clicked {
+  border: 4px solid yellow;
 }
